[package]
name = "linter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-channel = "2.3.1"
semver = "1.0.23"
serde = { version = "1.0.203", features = ["serde_derive"] }
slang_solidity = { version = "0.15.1", default-features = false }
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
toml = "0.8.14"
walkdir = "2.5.0"
